--- a/about.html
+++ b/about.html
@@ -44,6 +44,193 @@
             </section>
         </header>
         <!-- Main -->
+        <div class="black_line"></div>
+        <div class="section">
+            <div class="tabs">
+                <div class="tabs-links">
+                    <div class="tabs-link tabs-link-selected" data-tab="1">UX</div>
+                    <div class="tabs-link" data-tab="2">UI</div>
+                    <div class="tabs-link" data-tab="3">FontEnd</div>
+                    <div class="tabs-link" data-tab="4">BackEnd</div>
+                    <div class="tabs-link" data-tab="5">TeamLead</div>
+                </div>
+                <div class="tabs-items">
+                    <div class="tabs-item tabs-item-selected" data-tab="1">
+                        <div class="tabs-item-title"></div>
+                        <div class="tabs-item-description">
+                            <div class="section-3">
+                                <div class="parent">
+                                    <div>
+                                        <img class="circle" src="assets/img/Lauren_Chandler.jpg" alt="" />
+                                    </div>
+                                    <div>
+                                        <h3>Mari K.</h3>
+                                        <h2>5th Grade Teacher</h2>
+                                    </div>
+                                </div>
+                                <div>
+                                    <p>
+                                        Before I found Bookr, I had to read through every
+                                        textbook the
+                                        district selected myself. Now I can look up my book
+                                        on the app
+                                        before I even have to crack the spine!
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tabs-item" data-tab="2">
+                        <div class="tabs-item-title"></div>
+                        <div class="tabs-item-description">
+                            <div class="flex-about">
+                                <div class="section-3">
+                                    <div class="parent">
+                                        <div>
+                                            <img class="circle" src="assets/img/Marina-Picture.png" alt="" />
+                                        </div>
+                                        <div>
+                                            <h3>Mari K.</h3>
+                                            <h2>5th Grade Teacher</h2>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <p>
+                                            Before I found Bookr, I had to read through every textbook the
+                                            district selected myself. Now I can look up my book on the app
+                                            before I even have to crack the spine!
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <br>
+                            <div class="flex-about">
+                                <div class="section-3">
+                                    <div class="parent">
+                                        <div>
+                                            <img class="circle" src="assets/img/Marina-Picture.png" alt="" />
+                                        </div>
+                                        <div>
+                                            <h3>Mari K.</h3>
+                                            <h2>5th Grade Teacher</h2>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <p>
+                                            Before I found Bookr, I had to read through every
+                                            textbook the
+                                            district selected myself. Now I can look up my book
+                                            on the app
+                                            before I even have to crack the spine!
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <br>
+                            <div class="flex-about">
+                                <div class="section-3">
+                                    <div class="parent">
+                                        <div>
+                                            <img class="circle" src="assets/img/Marina-Picture.png" alt="" />
+                                        </div>
+                                        <div>
+                                            <h3>Mari K.</h3>
+                                            <h2>5th Grade Teacher
+                                            </h2>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <p>
+                                            Before I found Bookr, I
+                                            had to read through
+                                            every textbook the
+                                            district selected
+                                            myself. Now I can look
+                                            up my book on the app
+                                            before I even have to
+                                            crack the spine!
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="tabs-item" data-tab="3">
+                        <div class="tabs-item-title"></div>
+                        <div class="tabs-item-description">
+                            <div class="section-3">
+                                <div class="parent">
+                                    <div>
+                                        <img class="circle" src="assets/img/Marina-Picture.png" alt="" />
+                                    </div>
+                                    <div>
+                                        <h3>Mari K.</h3>
+                                        <h2>5th Grade Teacher</h2>
+                                    </div>
+                                </div>
+                                <div>
+                                    <p>
+                                        Before I found Bookr, I had to read through every textbook the
+                                        district selected myself. Now I can look up my book on the app
+                                        before I even have to crack the spine!
+
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tabs-item" data-tab="4">
+                    <div class="tabs-item-title"></div>
+                    <div class="tabs-item-description">
+                        <div class="section-3">
+                            <div class="parent">
+                                <div>
+                                    <img class="circle" src="assets/img/Marina-Picture.png" alt="" />
+                                </div>
+                                <div>
+                                    <h3>Mari K.</h3>
+                                    <h2>5th Grade Teacher</h2>
+                                </div>
+                            </div>
+                            <div>
+                                <p>
+                                    Before I found Bookr, I had to read through every textbook the
+                                    district selected myself. Now I can look up my book on the app
+                                    before I even have to crack the spine!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tabs-item" data-tab="5">
+                    <div class="tabs-item-title"></div>
+                    <div class="tabs-item-description">
+                        <div class="section-3">
+                            <div class="parent">
+                                <div>
+                                    <img class="circle" src="assets/img/Marina-Picture.png" alt="" />
+                                </div>
+                                <div>
+                                    <h3>Mari K.</h3>
+                                    <h2>5th Grade Teacher</h2>
+                                </div>
+                            </div>
+                            <div>
+                                <p>
+                                    Before I found Bookr, I had to read through every textbook the
+                                    district selected myself. Now I can look up my book on the app
+                                    before I even have to crack the spine!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
 
 
         <!-- Footer -->
@@ -64,11 +251,12 @@
                 Private Policy
             </p>
         </section>
-        </>
+    </div>
 
-        <!-- Scripts -->
-        <script src="#"></script>
-        <script src="#"></script>
+    <!-- Scripts -->
+    <script defer="defer" src="JavaScript/Tabs.js"></script>
+    <script src="#"></script>
+    <script src="#"></script>
 </body>
 
 </html>
