End of Day Commit, getting rid of bloat code

--- a/about.html
+++ b/about.html
@@ -55,6 +55,10 @@
                     <div class="tabs-link" data-tab="5">TeamLead</div>
                 </div>
                 <div class="tabs-items">
+
+
+
+
                     <div class="tabs-item tabs-item-selected" data-tab="1">
                         <div class="tabs-item-title"></div>
                         <div class="tabs-item-description">
@@ -62,6 +66,56 @@
                                 <div class="parent">
                                     <div>
                                         <img class="circle" src="assets/img/Lauren_Chandler.jpg" alt="" />
+                                    </div>
+                                    <div>
+                                        <h3>Lauren Chandler</h3>
+                                        <h2>UX Designer</h2>
+                                    </div>
+                                </div>
+                                <div>
+                                    <p>
+                                        Before I found Bookr, I had to read through every
+                                        textbook the
+                                        district selected myself. Now I can look up my book
+                                        on the app
+                                        before I even have to crack the spine!
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+
+
+                    <div class="tabs-item" data-tab="2">
+                        <div class="tabs-item-title"></div>
+                        <div class="tabs-item-description">
+                            <div class="section-3">
+                                <div class="parent">
+                                    <div>
+                                        <img class="circle" src="assets/img/Marina-Picture.png" alt="" />
+                                    </div>
+                                    <div>
+                                        <h3>Mari K.</h3>
+                                        <h2>5th Grade Teacher</h2>
+                                    </div>
+                                </div>
+                                <div>
+                                    <p>
+                                        Before I found Bookr, I had to read through every textbook the
+                                        district selected myself. Now I can look up my book on the app
+                                        before I even have to crack the spine!
+                                    </p>
+                                </div>
+                            </div>
+                            <br>
+                            <div class="section-3">
+                                <div class="parent">
+                                    <div>
+                                        <img class="circle" src="assets/img/Marina-Picture.png" alt="" />
                                     </div>
                                     <div>
                                         <h3>Mari K.</h3>
@@ -78,83 +132,38 @@
                                     </p>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="tabs-item" data-tab="2">
-                        <div class="tabs-item-title"></div>
-                        <div class="tabs-item-description">
-                            <div class="flex-about">
-                                <div class="section-3">
-                                    <div class="parent">
-                                        <div>
-                                            <img class="circle" src="assets/img/Marina-Picture.png" alt="" />
-                                        </div>
-                                        <div>
-                                            <h3>Mari K.</h3>
-                                            <h2>5th Grade Teacher</h2>
-                                        </div>
+                            <br>
+                            <div class="section-3">
+                                <div class="parent">
+                                    <div>
+                                        <img class="circle" src="assets/img/Marina-Picture.png" alt="" />
                                     </div>
                                     <div>
-                                        <p>
-                                            Before I found Bookr, I had to read through every textbook the
-                                            district selected myself. Now I can look up my book on the app
-                                            before I even have to crack the spine!
-                                        </p>
+                                        <h3>Mari K.</h3>
+                                        <h2>5th Grade Teacher
+                                        </h2>
                                     </div>
                                 </div>
-                            </div>
-                            <br>
-                            <div class="flex-about">
-                                <div class="section-3">
-                                    <div class="parent">
-                                        <div>
-                                            <img class="circle" src="assets/img/Marina-Picture.png" alt="" />
-                                        </div>
-                                        <div>
-                                            <h3>Mari K.</h3>
-                                            <h2>5th Grade Teacher</h2>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <p>
-                                            Before I found Bookr, I had to read through every
-                                            textbook the
-                                            district selected myself. Now I can look up my book
-                                            on the app
-                                            before I even have to crack the spine!
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <br>
-                            <div class="flex-about">
-                                <div class="section-3">
-                                    <div class="parent">
-                                        <div>
-                                            <img class="circle" src="assets/img/Marina-Picture.png" alt="" />
-                                        </div>
-                                        <div>
-                                            <h3>Mari K.</h3>
-                                            <h2>5th Grade Teacher
-                                            </h2>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <p>
-                                            Before I found Bookr, I
-                                            had to read through
-                                            every textbook the
-                                            district selected
-                                            myself. Now I can look
-                                            up my book on the app
-                                            before I even have to
-                                            crack the spine!
-                                        </p>
-                                    </div>
+                                <div>
+                                    <p>
+                                        Before I found Bookr, I
+                                        had to read through
+                                        every textbook the
+                                        district selected
+                                        myself. Now I can look
+                                        up my book on the app
+                                        before I even have to
+                                        crack the spine!
+                                    </p>
                                 </div>
                             </div>
                         </div>
                     </div>
+
+
+
+
+
 
                     <div class="tabs-item" data-tab="3">
                         <div class="tabs-item-title"></div>
