Finished. Going back to see if I can make it look better in desktop mode

--- a/about.html
+++ b/about.html
@@ -70,15 +70,26 @@
                                     <div>
                                         <h3>Lauren Chandler</h3>
                                         <h2>UX Designer</h2>
+                                        <section class="social-card-tabs">
+                                            <a href="#" class="social-icons"><img src="assets/img/twitter-brands.svg"
+                                                    alt="" />
+                                            </a>
+                                            <a href="#" class="social-icons"><img src="assets/img/facebook.svg"
+                                                    alt="" /></a>
+                                            <a href="#" class="social-icons"><img src="assets/img/instagram-brands.svg"
+                                                    alt="" /></a>
+                                            <a href="#" class="social-icons"><img src="assets/img/pinterest-brands.svg"
+                                                    alt="" /></a>
+                                        </section>
                                     </div>
                                 </div>
                                 <div>
                                     <p>
-                                        Before I found Bookr, I had to read through every
-                                        textbook the
-                                        district selected myself. Now I can look up my book
-                                        on the app
-                                        before I even have to crack the spine!
+                                        As a user experience designer, I create designs based on user interviews and my
+                                        research of user needs. By testing sketches, flow diagrams, wireframes, and
+                                        mockups with actual users, I'm able to ensure that our developers will build a
+                                        relevant product and also that our users will receive a positive textbook review
+                                        experience.
                                     </p>
                                 </div>
                             </div>
@@ -96,18 +107,21 @@
                             <div class="section-3">
                                 <div class="parent">
                                     <div>
-                                        <img class="circle" src="assets/img/Marina-Picture.png" alt="" />
+                                        <img class="circle" src="assets/img/Imageofself_cropped999.jpg" alt="" />
                                     </div>
                                     <div>
-                                        <h3>Mari K.</h3>
-                                        <h2>5th Grade Teacher</h2>
+                                        <h3>Timothy McGowen</h3>
+                                        <h2>User Interface</h2>
                                     </div>
                                 </div>
                                 <div>
                                     <p>
-                                        Before I found Bookr, I had to read through every textbook the
-                                        district selected myself. Now I can look up my book on the app
-                                        before I even have to crack the spine!
+                                        Using the Designs given to me by Lauren Chandler, our wonderful UX designer, I
+                                        was able to build out the site she envisioned.<br>
+
+                                        Using HTML, CSS, LESS, and JS I also created an about page showing that I could
+                                        take the design styles she laid out in the marketing page and translate that to
+                                        an entirely new design.
                                     </p>
                                 </div>
                             </div>
@@ -115,20 +129,18 @@
                             <div class="section-3">
                                 <div class="parent">
                                     <div>
-                                        <img class="circle" src="assets/img/Marina-Picture.png" alt="" />
+                                        <img class="circle" src="assets/img/yakuana-davis.jpg" alt="" />
                                     </div>
                                     <div>
-                                        <h3>Mari K.</h3>
-                                        <h2>5th Grade Teacher</h2>
+                                        <h3>Ya'Kuana Davis</h3>
+                                        <h2>User Interface</h2>
                                     </div>
                                 </div>
                                 <div>
                                     <p>
-                                        Before I found Bookr, I had to read through every
-                                        textbook the
-                                        district selected myself. Now I can look up my book
-                                        on the app
-                                        before I even have to crack the spine!
+                                        With the help of Lauren Chandler's phenomenal designs and our team's back end
+                                        developers, I was able to create my first website. Through trial and error,
+                                        research and collaboration, I was able to materialize Lauren's vision.
                                     </p>
                                 </div>
                             </div>
@@ -136,24 +148,20 @@
                             <div class="section-3">
                                 <div class="parent">
                                     <div>
-                                        <img class="circle" src="assets/img/Marina-Picture.png" alt="" />
+                                        <img class="circle" src="assets/img/colin-devries.jpeg" alt="" />
                                     </div>
                                     <div>
-                                        <h3>Mari K.</h3>
-                                        <h2>5th Grade Teacher
+                                        <h3>Colin de Vries</h3>
+                                        <h2>User Interface
                                         </h2>
                                     </div>
                                 </div>
                                 <div>
                                     <p>
-                                        Before I found Bookr, I
-                                        had to read through
-                                        every textbook the
-                                        district selected
-                                        myself. Now I can look
-                                        up my book on the app
-                                        before I even have to
-                                        crack the spine!
+                                        Based on the design created by our UX designer, Lauren Chandler, I created an
+                                        interactive marketing page for our project using HTML, CSS preprocessing, and
+                                        JavaScript. In addition, I created an "About Us" page which features all of our
+                                        team members and describes their role in creating this project.
                                     </p>
                                 </div>
                             </div>
@@ -171,7 +179,28 @@
                             <div class="section-3">
                                 <div class="parent">
                                     <div>
-                                        <img class="circle" src="assets/img/Marina-Picture.png" alt="" />
+                                        <img class="circle" src="assets/img/oluwatimileyin-ojo.jpg" alt="" />
+                                    </div>
+                                    <div>
+                                        <h3>Timileyin Ojo</h3>
+                                        <h2>Front End Developer</h2>
+                                    </div>
+                                </div>
+                                <div>
+                                    <p>
+                                        Before I found Bookr, I had to read through every textbook the
+                                        district selected myself. Now I can look up my book on the app
+                                        before I even have to crack the spine!
+
+                                    </p>
+                                </div>
+                            </div>
+                            <br>
+                            <div class="section-3">
+                                <div class="parent">
+                                    <div>
+                                        <img class="circle" src="assets/img/Screen_Shot_2019-06-26_at_10.15.31_AM.png"
+                                            alt="" />
                                     </div>
                                     <div>
                                         <h3>Mari K.</h3>
@@ -180,8 +209,10 @@
                                 </div>
                                 <div>
                                     <p>
-                                        Before I found Bookr, I had to read through every textbook the
-                                        district selected myself. Now I can look up my book on the app
+                                        Before I found Bookr, I had to read through every
+                                        textbook the
+                                        district selected myself. Now I can look up my book
+                                        on the app
                                         before I even have to crack the spine!
 
                                     </p>
@@ -196,11 +227,11 @@
                         <div class="section-3">
                             <div class="parent">
                                 <div>
-                                    <img class="circle" src="assets/img/Marina-Picture.png" alt="" />
+                                    <img class="circle" src="assets/img/arron-marshall.jpg" alt="" />
                                 </div>
                                 <div>
-                                    <h3>Mari K.</h3>
-                                    <h2>5th Grade Teacher</h2>
+                                    <h3>Arron Marshall</h3>
+                                    <h2>Back End Developer</h2>
                                 </div>
                             </div>
                             <div>
@@ -219,11 +250,11 @@
                         <div class="section-3">
                             <div class="parent">
                                 <div>
-                                    <img class="circle" src="assets/img/Marina-Picture.png" alt="" />
+                                    <img class="circle" src="assets/img/Nick.jpg" alt="" />
                                 </div>
                                 <div>
-                                    <h3>Mari K.</h3>
-                                    <h2>5th Grade Teacher</h2>
+                                    <h3>Nick Batmanglidj</h3>
+                                    <h2>Team Leader</h2>
                                 </div>
                             </div>
                             <div>
@@ -243,13 +274,13 @@
 
 
         <!-- Footer -->
-        <section class="social-card">
+        <!-- <section class="social-card">
             <a href="#" class="social-icons"><img src="assets/img/twitter-brands.svg" alt="" />
             </a>
             <a href="#" class="social-icons"><img src="assets/img/facebook.svg" alt="" /></a>
             <a href="#" class="social-icons"><img src="assets/img/instagram-brands.svg" alt="" /></a>
             <a href="#" class="social-icons"><img src="assets/img/pinterest-brands.svg" alt="" /></a>
-        </section>
+        </section> -->
 
         <!-- Copyright -->
         <div class="black_line_footer"></div>
